<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/bottombar_item_categoty"
        android:enabled="true"
        android:icon="@drawable/ic_category"
        android:title="@string/label_category" />
    <item
        android:id="@+id/bottombar_item_collection"
        android:enabled="true"
        android:icon="@drawable/ic_collection"
        android:title="@string/label_collection" />
    <item
        android:id="@+id/bottombar_item_order"
        android:enabled="true"
        android:icon="@drawable/ic_order_bottomsheet"
        android:title="@string/label_quick_order" />

    <item
        android:id="@+id/bottombar_item_more"
        android:enabled="true"
        android:icon="@drawable/ic_more"
        android:title="@string/label_more" />

</menu>