<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data></data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:tag="@string/font_opensans_regular_id"
                    android:text="@string/label_address"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/text_size_very_small_12" />

                <EditText
                    style="@style/NormalEditText"
                    android:background="@null"
                    android:hint="@string/hint_address"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    android:maxLength="@integer/max_length"
                    android:paddingBottom="5dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/pink" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:tag="@string/font_opensans_regular_id"
                    android:text="@string/label_landmark"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/text_size_very_small_12" />

                <EditText
                    style="@style/NormalEditText"
                    android:background="@null"
                    android:hint="@string/hint_landmark"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    android:maxLength="@integer/max_length"
                    android:paddingBottom="5dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/pink" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:tag="@string/font_opensans_regular_id"
                    android:text="@string/label_city"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/text_size_very_small_12" />

                <EditText
                    style="@style/NormalEditText"
                    android:background="@null"
                    android:hint="@string/hint_city_ast"
                    android:imeOptions="actionNext"
                    android:maxLength="@integer/max_length"
                    android:paddingBottom="5dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/pink" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:tag="@string/font_opensans_regular_id"
                    android:text="@string/label_state"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/text_size_very_small_12" />

                <EditText
                    style="@style/NormalEditText"
                    android:background="@null"
                    android:hint="@string/hint_state_ast"
                    android:imeOptions="actionNext"
                    android:paddingBottom="5dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/pink" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:tag="@string/font_opensans_regular_id"
                    android:text="@string/label_pincode"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/text_size_very_small_12" />

                <EditText
                    style="@style/NormalEditText"
                    android:background="@null"
                    android:hint="@string/hint_pincode_ast"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingBottom="5dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/pink" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
