<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textview_new_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:tag="@string/font_opensans_regular_id"
            android:text="@string/label_new_password"
            android:textColor="@color/pink"
            android:textSize="@dimen/text_size_very_small_12" />

        <EditText
            android:id="@+id/edittext_password"
            style="@style/NormalEditText"
            android:background="@null"
            android:hint="@string/hint_new_password_ast"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="@integer/max_length"
            android:paddingBottom="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:alpha=".5"
            android:background="@color/pink" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:tag="@string/font_opensans_regular_id"
            android:text="@string/label_confirm_password"
            android:textColor="@color/pink"
            android:textSize="@dimen/text_size_very_small_12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edittext_confirm_password"
                style="@style/NormalEditTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_confirm_password_ast"
                android:imeActionLabel="@string/button_login"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="@integer/max_length"
                android:paddingBottom="5dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:alpha=".5"
            android:background="@color/pink" />

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="@color/pink"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <TextView
                android:id="@+id/textview_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:paddingTop="10dp"
                android:tag="@string/font_opensans_regular_id"
                android:text="@string/button_done"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>