<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/base_layout"
    android:layout_marginTop="90dp"
    android:orientation="vertical"
    android:padding="30dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:tag="@string/font_opensans_regular_id"
        android:text="@string/label_new_mobile_no"
        android:textColor="@color/pink"
        android:textSize="@dimen/text_size_very_small_12" />

    <TextView
        android:id="@+id/textview_new_mobile_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:tag="@string/font_opensans_regular_id"
        android:maxLength="10"
        android:textSize="@dimen/text_size_medium"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:alpha=".5"
        android:background="@color/pink" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:tag="@string/font_opensans_regular_id"
        android:text="@string/label_password"
        android:textColor="@color/pink"
        android:textSize="@dimen/text_size_very_small_12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edittext_password"
            style="@style/NormalEditTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_password"
            android:imeActionLabel="@string/button_login"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="@integer/max_length"
            android:paddingBottom="5dp" />

        <ImageView
            android:id="@+id/imageview_pass_visible"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/selector_password" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:alpha=".5"
        android:background="@color/pink" />

    <TextView
        android:id="@+id/textview_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_corner_solid_pink"
        android:paddingBottom="10dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:paddingTop="10dp"
        android:tag="@string/font_opensans_regular_id"
        android:text="@string/button_done"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small" />
</LinearLayout>