<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/ll_no_internet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_no_internet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="10dp"
            android:tag="@string/font_opensans_semi_bold_id"
            android:text="@string/error_internet"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/textview_retry"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_corner_solid_pink"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:tag="@string/font_opensans_semi_bold_id"
            android:text="@string/button_retry"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

    </LinearLayout>
</layout>